--- a/scripts/2_data_processing.Rmd
+++ b/scripts/2_data_processing.Rmd
@@ -105,6 +105,29 @@ fwrite(dt, file = paste0(p_dat_derived, "shaanxi.csv"))
 dt <- fread(input = paste0(p_dat_derived, "shaanxi.csv"))
 ```
 
+```{r load-data-derived}
+
+
+b_age <- fread(input = paste0(p_dat_derived, "belarus_age.csv"))
+s_age <- fread(input = paste0(p_dat_derived, "shaanxi_age.csv"))
+
+
+b_length <- fread(input = paste0(p_dat_derived, "belarus_length.csv"))
+s_length <- fread(input = paste0(p_dat_derived, "shaanxi_length.csv"))
+
+
+b_max_length <- fread(input = paste0(p_dat_derived, "belarus_max_length.csv"))
+s_max_length <- fread(input = paste0(p_dat_derived, "shaanxi_max_length.csv"))
+
+# rasters
+s_age_r <- brick(paste0(p_dat_derived, "shaanxi_age.tif"))
+b_age_r <- brick(paste0(p_dat_derived, "belarus_age.tif"))
+
+
+
+```
+
+
 
 
 ```{r simple-plots}
@@ -592,11 +615,14 @@ object_size(length_all)
 dat <- length_all[, .(mean_length = mean(length)), by = site]
 dat2 <- length_all[length >= 5, .(mean_length_thr5 = mean(length)), by = site]
 dat <- merge(dat, dat2, by = "site", sort = FALSE)
+dat
 
-
+# Doesn't work
 dat[, mean_length2 := length_all[length >= 5, mean(length), by = site]]
 # mean time abandoned, if using 5 year abandonment definition threshold, following Yin et al. 2020
 
+
+# max length
 ```
 
 ```{r histograms}
@@ -626,12 +652,41 @@ s_distill[, site := "shaanxi"]
 
 distill <- rbind(b_distill, s_distill)
 
+b_max_distill <- b_max_length[, .(freq = .N), by = max_length]
+b_max_distill[, site := "belarus"]
+s_max_distill <- s_max_length[, .(freq = .N), by = max_length]
+s_max_distill[, site := "shaanxi"]
+max_distill <- rbind(b_max_distill, s_max_distill)
+
 # ggplots
 # both site histograms
-ggplot(data = distill) + 
-  geom_col(mapping = aes(x = length, y = freq), fill = "black") +
+dat
+length_plot <- ggplot(data = distill) + 
+  labs(title = "Histogram of all periods of abandonment") +
+  geom_col(mapping = aes(x = length, y = freq), fill = "gray50") +
   facet_grid(rows = vars(site), scales = "free") +
+  geom_vline(xintercept=5, linetype="dashed", 
+             color = "red", size = 0.75) +
+  geom_vline(xintercept=20, linetype="dashed", color = "dark green", size = 0.75) +
   theme_classic()
+
+# max_length
+max_length_plot <- ggplot(data = max_distill) + 
+  labs(title = "Histogram of max abandonment length per pixel") +
+  geom_col(mapping = aes(x = max_length, y = freq), fill = "gray50") +
+  facet_grid(rows = vars(site), scales = "free") +
+  geom_vline(xintercept=5, linetype="dashed", 
+             color = "red", size = 0.75) +
+  geom_vline(xintercept=20, linetype="dashed", color = "dark green", size = 0.75) +
+  theme_classic()
+
+
+length_plot
+max_length_plot
+dat
+
+
+
 
 # just belarus
 ggplot(data = b_distill) + 
@@ -679,7 +734,9 @@ plot(max)
 
 ```{r parallel-dt}
 
+
 ```
+
 
 
 ```{r animation}
